--- a/netlify/functions/ai-chat/package.json
+++ b/netlify/functions/ai-chat/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ai-chat-function",
+  "name": "ai-chat",
   "version": "1.0.0",
+  "main": "ai-chat.js",
   "dependencies": {
-    "@google/genai": "^0.15.0" 
-    // Atau 'openai' jika Anda menggunakan ChatGPT
+    "node-fetch": "^3.3.2"
   }
 }
