--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "ai-chatbot-netlify",
+  "name": "ai-chatbot",
   "version": "1.0.0",
-  "description": "AI Chatbot using Netlify Functions for API integration",
+  "description": "Chatbot project with Netlify Functions",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "echo 'No local start script defined'",
+    "build": "echo 'No build step required'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "openai": "^4.0.0",
+    "node-fetch": "^3.3.2"
+  }
 }
