--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "start": "echo 'No local start script defined'",
     "build": "echo 'No build step required'"
   },
-"dependencies": {
-  "@google/generative-ai": "^0.14.0",
-  "node-fetch": "^3.3.2",
-  "openai": "^4.0.0"
+  "dependencies": {
+    "@google/generative-ai": "^0.14.0",
+    "openai": "^4.0.0",
+    "node-fetch": "^3.3.2"
+  }
 }
-}
-
-
